# Geography-Based-Model

./: .gitignore  CMakeLists.txt  Makefile  Manual.docx  README.md  runall_default.sh
Analysis/: README
Analysis/Inputs/:  all_increases_fatalilty.py  AbsoluateLockDownSIIR.py  AbsoluteLockdown_SIIRS.py  AbsoluteLockdown_SIIRS_No_Disobedient.py  AbsoluteLockdown_SIIR_No_Disobedient.py  AdultsMoreMobile.py  AllIncreaseRecovery.py  AllLessInfectious.py  AllMoreInfectious.py  AllMoreMobile.py  ElderlyIncreaseFatality.py  HigherCorrelationNeighbour.py  HigherDisobedience.py  HigherFatalityModifier.py  HigherHospitalCapacity.py  LessCorrelatedNeighbours.py  LessInfectionPhases.py  LessRecoveryPhases.py  LowerDisobedience.py  LowerFatalityModifier.py  LowerHospitalCapacity.py  MoreInfectionPhases.py  MoreRecoveryPhases.py  YoungRecoveQuicker.py
GIS_Viewer/: .gitignore  README.md  ottawaDA.geojson  visualization.json
GIS_Viewer/example/: README.md  ottawaTiny.geojson  structure.json  visualization.json
GIS_Viewer/ottawa/simulation_runs/run1/: structure.json
GIS_Viewer/settings/visualColorConfig/: rgba_strings.txt  visualization.html
Scripts/: .gitignore
Scripts/Graph_Generator/: README  graph_generator.py  states.csv
Scripts/Input_Generator/: Instructions.docx  README  README.md  generate_cadmium_json.py  generate_cadmium_json_g2.py  scenario.json
Scripts/Input_Generator/input/: README.md  fields.json
Scripts/Msg_Log_Parser/: readme.txt  runConverter.sh
cadmium_gis/: .gitignore  README.md  config_cadmium.json  generate_cadmium_json.ipynb  scenario.json
cadmium_gis/.ipynb_checkpoints/: generate_cadmium_json-checkpoint.ipynb
cadmium_gis/data/: DA Ontario Adjacency.csv  DA Ontario Clean.csv  DA Ottawa Adjacency.csv  DA Ottawa Clean.csv  DA Ottawa.gpkg  DB Ottawa Adjacency.csv  DB Ottawa Clean.csv  readme.txt
cadmium_gis/input/: default.json  infectedCell.json
config/: .gitignore  README.md  absolute_threshold_02_02.json  default_zhong.json  multi_agent_geographical_model.json  multi_agent_zhong.json  tinyScenarioSIRD.json
model/: Zhong_Coupled.h  geographical_coupled.hpp  zhong_coupled.hpp
model/cells/: README.md  SIR.h  Vicinity.h  Zhong_Cell.h  distribution_type.h  geographical_cell.hpp  hoya_cell.hpp  hysteresis_factor.h  hysteresis_factor.hpp  phase_rates_object.h  rates_configuration.h  simulation_config.hpp  simulation_configuration.hpp  sir.hpp  vicinity.hpp  zhong_cell.hpp
model/cells/distributions/: coefficient.hpp
src/: main.cpp
test/: coefficients_test.cpp
